Fixed boxes on mobile

--- a/SU-Election-2016/css/style.css
+++ b/SU-Election-2016/css/style.css
@@ -9,7 +9,9 @@ body {
 }
 
 .img-center {
-	margin: 0 auto;
+	margin: auto;
+	/*margin-left: 0;*/
+	/*margin-right: 0;*/
 	max-height: 128px;
 	border-radius: 5px;
 }
@@ -26,6 +28,8 @@ footer {
 	padding-top: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
+	margin-left: 0px;
+	margin-right: 0px; 
 }
 
 .bio{
@@ -41,6 +45,7 @@ footer {
 .selected{
     background-color: #e5e5e5;
     border-radius: 5px;
+
 }
 
 .twitter-timeline{
